clusters/z01/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - grafana
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
